[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/player/state_machine/state_machine.gd" type="Script" id=1]
[ext_resource path="res://src/player/state_machine/states/_movement.gd" type="Script" id=2]
[ext_resource path="res://src/player/player_fps_controller.gd" type="Script" id=3]
[ext_resource path="res://src/player/head.gd" type="Script" id=4]
[ext_resource path="res://src/player/state_machine/states/idle.gd" type="Script" id=5]
[ext_resource path="res://src/player/state_machine/states/walking.gd" type="Script" id=6]
[ext_resource path="res://src/player/state_machine/states/sprinting.gd" type="Script" id=7]
[ext_resource path="res://src/player/state_machine/states/jumping.gd" type="Script" id=8]
[ext_resource path="res://src/player/state_machine/states/falling.gd" type="Script" id=9]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 1.25

[sub_resource type="CylinderShape" id=2]
radius = 0.75
height = 0.5

[sub_resource type="CapsuleMesh" id=3]
radius = 0.75
mid_height = 1.25

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="CylinderMesh" id=5]
top_radius = 0.75
bottom_radius = 0.75
height = 1.0

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 1, 0, 0, 1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
script = ExtResource( 4 )

[node name="Camera" type="Camera" parent="Head"]
current = true
far = 2000.0

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.4, 0 )
shape = SubResource( 1 )

[node name="FeetCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
shape = SubResource( 2 )

[node name="BodyMesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.4, 0 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 1 )
initial_state = NodePath("Movement/Idle")

[node name="Movement" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 5 )

[node name="Walking" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 6 )

[node name="Sprinting" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 7 )

[node name="Jumping" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 8 )

[node name="Falling" type="Node" parent="StateMachine/Movement"]
script = ExtResource( 9 )

[node name="Sliding" type="Node" parent="StateMachine/Movement"]

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )
